--- a/views/concurso.html
+++ b/views/concurso.html
@@ -49,16 +49,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="/{{concurso.url_concurso}}">Listado de Vídeos</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">Reglas de Juego</a>
                     </li>
                     <li>
-                        <a href="post.html">Subir vídeo</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="/{{concurso.url_concurso}}/new">Subir vídeo</a>
                     </li>
                 </ul>
             </div>
