--- a/views/login.html
+++ b/views/login.html
@@ -49,7 +49,7 @@
                                 </div>
                                 <button type="submit" class="btn btn-lg btn-success btn-block">Ingresar</button>
                                 <div align = "center" style="margin-top:10px;">
-                                    <a href="/register">Crear Cuenta</a>
+                                    <a href="/register">Crear Cuenta</a> | <a href="/">Regresar</a>
                                 </div>
                             </fieldset>
                         </form>
