--- a/views/concurso.html
+++ b/views/concurso.html
@@ -42,7 +42,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="/{{concurso.url_concurso}}">SmartTools</a>
+                <a class="navbar-brand" href="/">SmartTools</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,7 +52,7 @@
                         <a href="/{{concurso.url_concurso}}">Listado de Vídeos</a>
                     </li>
                     <li>
-                        <a href="about.html">Reglas de Juego</a>
+                        <a href="/{{concurso.url_concurso}}/rules">Reglas de Juego</a>
                     </li>
                     <li>
                         <a href="/{{concurso.url_concurso}}/new">Subir vídeo</a>
@@ -106,38 +106,10 @@
             </div>
             //-->
 
-            <div class="col-lg-12">
-                <table class="table table-striped">
-                    <tbody>
-                    <tr>
-                        <td width = "20%">
-                            <center>
-                                <img src="http://placehold.it/100x100" alt="">
-                            <center>
-                        </td>
-                        <td>
-                            Nada
-                        </td>
-                    </tr>
-                    <tr>
-                        <td width = "20%">
-                            <center>
-                                <img src="http://placehold.it/100x100" alt="">
-                            <center>
-                        </td>
-                        <td>Moe</td>
-                        
-                    </tr>
-                    <tr>
-                        <td width = "20%">
-                            <center>
-                                <img src="http://placehold.it/100x100" alt="">
-                            <center>
-                        </td>
-                        <td>Dooley</td>
-                    </tr>
-                    </tbody>
-                </table>
+            <div class="col-lg-12" id = "videos">
+            </div>
+            <div class="col-lg-12" align = "center">
+                <div id = "paginar"></div>
             </div>
         </div>
     </div>
@@ -148,7 +120,8 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10">
+                    <!--
                     <ul class="list-inline text-center">
                         <li>
                             <a href="#">
@@ -175,14 +148,16 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                    //-->
+                    <p class="copyright text-muted">Copyright &copy; SmartTools 2016</p>
                 </div>
             </div>
         </div>
     </footer>
 
     <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery.min.js"></script> //-->
+    <script src = "//code.jquery.com/jquery-2.2.4.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
@@ -193,11 +168,11 @@
 
     <!-- Theme JavaScript -->
     <script src="concurso/clean-blog.min.js"></script>
-    <!-- <script src="js/concurso.js"></script> //-->
+    <script src="js/concurso.js"></script>
     <script>
         var factoria = function()
         {
-            var data = {token_concurso : "{{concurso.token_concurso}}"};
+            var data = {token_concurso : "{{concurso.token_concurso}}", url_concurso : "{{concurso.url_concurso}}"};
             this.getData = function(elemento)
             {
                 return data[elemento];
