--- a/views/register.html
+++ b/views/register.html
@@ -36,31 +36,31 @@
                         <form role = "form" id = "form">
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" id = "identificacion" placeholder="Identificación" name="identificacion" type="number" autofocus required value="123">
+                                    <input class="form-control" id = "identificacion" placeholder="Identificación" name="identificacion" type="number" autofocus required >
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" id = "nombres" placeholder="Nombres" name="nombres" type="text" value="sda" required>
+                                    <input class="form-control" id = "nombres" placeholder="Nombres" name="nombres" type="text" required>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" id = "apellidos" placeholder="Apellidos" name="apellidos" type="text" value="asda" required>
+                                    <input class="form-control" id = "apellidos" placeholder="Apellidos" name="apellidos" type="text" required>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" id = "email" placeholder="E-mail" name="email" type="email" value="correo@correo.com">
+                                    <input class="form-control" id = "email" placeholder="E-mail" name="email" type="email">
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" id = "password" placeholder="Password" name="password" type="password" value="123" required>
+                                    <input class="form-control" id = "password" placeholder="Password" name="password" type="password" required>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" id = "repite_password" placeholder="Repite Password" name="repite_password" type="password" value="123" required>
+                                    <input class="form-control" id = "repite_password" placeholder="Repite Password" name="repite_password" type="password" required>
                                 </div>
                                 <hr>
                                 <div class="form-group">
-                                    <input class="form-control" id = "empresa" placeholder="Nombre Empresa" name="empresa" type="text" value="Empresa" required>
+                                    <input class="form-control" id = "empresa" placeholder="Nombre Empresa" name="empresa" type="text" required>
                                 </div>
                                 <hr>
                                 <button type="submit" class="btn btn-lg btn-success btn-block">Guardar</button>
                                 <div align = "center" style="margin-top:10px;">
-                                    <a href="/login">Ingresar</a>
+                                    <a href="/login">Ingresar</a> | <a href="/">Regresar</a>
                                 </div>                                    
                                 </div>
                             </fieldset>
