--- a/views/video.html
+++ b/views/video.html
@@ -16,12 +16,11 @@
 
     <!-- Theme CSS -->
     <link href="../concurso/clean-blog.min.css" rel="stylesheet">
-
+    <!-- Para el Player //-->
+    <!-- <link href="../videojs/video-js.css" rel="stylesheet"> //-->
+    <link href="http://vjs.zencdn.net/5.11.6/video-js.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="../vendor/sweetalert/sweetalert.css" rel="stylesheet" type="text/css">
-    <link href="../vendor/summernote/summernote.css" rel="stylesheet" type="text/css">
-
     <link href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
@@ -32,15 +31,10 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
-        .btn {
-                padding: 5px;
-            }
-    </style>
-
+         .video-js {width: 100%}
+        </style>
 </head>
-
 <body>
-
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
@@ -90,77 +84,52 @@
 
     <!-- Main Content -->
     <div class="container">
-        
-        <div class="row">
+        <div class="col-lg-12" align = "center">
+            <h1>{{video.titulo_video}}</h1><hr>
+        </div>
+        <div class="col-lg-12" align = "center">
+            <video id="my-video" class="art-preview lazy video-js vjs-default-skin vjs-big-play-centered" controls preload="auto" width="640" height="350"
+            poster="/static/{{video.idadministrador}}/videos/thumbnail/{{video.token_archivo}}.png" data-setup="{}">
+                <source src="/static/{{video.idadministrador}}/videos/convert/{{video.token_archivo}}.mp4" type='video/mp4'>
+                <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a web browser that
+                <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+            </p>
+            </video>
+        </div>
+        <hr>
+        <div class="col-lg-12">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <!-- style="display:none;" //-->
-                <div id = "progreso" style="display:none;>
-                    <h2 id = "tituloSube"></h2>
-                    <div class = "progress">
-                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 0%" id = "progress">
-                            0%
-                        </div>
-                    </div>
-                    <div class="alert alert-info small">
-                        Este proceso puede tomar unos segundos, por favor no cierres las ventana hasta que el proceso haya culminado.
-                    </div>
-                </div>
-                <div id = "termina" style="display:none;">
-                    <div class="alert alert-success">
-                        Hemos recibido tu video y los estamos procesado para que sea publicado. Tan pronto el video quede publicado en la página del concurso te notificaremos por email.
-                    </div>
-                    <div align="center">                                    
-                        <a href="/{{concurso.url_concurso}}" class="btn btn-default" style="margin: 10px;"><span class="glyphicon glyphicon glyphicon-th-list" style="padding:10px;"></span>Regresar al listado de vídeos</a>
-                        <a href="/{{concurso.url_concurso}}/new" class="btn btn-danger"><span class="glyphicon glyphicon-cloud-upload" style="padding:10px;"></span>Subir otro vídeo</a>
-                    </div>
-                </div>
-                <!-- Inicio //-->
-                <form ref = 'uploadForm' id = 'uploadForm' action = '/newvideo' method='post' encType = "multipart/form-data" role="form">
-                    <div class="form-group">
-                        <label>Título del vídeo</label>
-                        <input class="form-control" placeholder = "Título del vídeo" name = "titulo_video" id = "titulo_video" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Digita tú nombre</label>
-                        <input class="form-control" placeholder="Nombres y Apellidos"  name = "nombre_usuario" id = "nombre_usuario" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Digita tú E-mail</label>
-                        <input type = "email" class="form-control" placeholder="Correo Electrónico"  name = "email" id = "email" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Descripción del vídeo</label>
-                        <textarea class="summernote" name = "descripcion" id = "descripcion"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <!-- <label>Subir vídeo</label> //-->
-                        <div align = "center">
-                            <!-- AVI,WMV, FLV, MP4 //-->
-                            <a href="javascript:;" class="btn btn-danger" style="padding:13px; width: 50%;" id = "upvideo">
-                                    <span class="glyphicon glyphicon-cloud-upload"></span> Subir Mi vídeo
-                            </a>
-                            <!-- <input type="file" name="sampleFile" style="display:none;"/> //-->
-                            <input type="file" name="sampleFile" style="display: none" id = "upload" accept=".avi, .wmv, .flv, .mov, .mp4, .webm, .ogg|video/*"/>
-                            <h3 id = "nombreVideo">Selecciona el vídeo</h3>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="form-group">
-                        <input type = "hidden" name = "idadministrador" value = "{{concurso.idadministrador}}">
-                        <input type = "hidden" name = "idconcurso" value = "{{concurso.idconcurso}}">
-                        <button type="submit" class="btn btn-lg btn-success btn-block" style="padding:13px;">Guardar</button>
-                    </div>
-                </form>	
-                <!-- Fin //-->
+                <div>Duración : {{video.duracion_string}}</div>
+                <div>Publicado por : {{video.nombre_usuario}}</div>
+                <div>Email : {{video.email}}</div>
+                <div>Fecha Publicación : {{video.fecha_publica_string}} a las {{video.hora_publica}}</div>
+                <hr>
+                <h3>Mensaje</h3>
+                {{video.mensaje | raw}}
             </div>
         </div>
+        <!--
+        <hr>
+        <div class="row">
+            <div class="col-lg-12" align = "center">
+                <a href="/{{concurso.url_concurso}}/new" class="btn btn-info">
+                    <span class="glyphicon glyphicon-cloud-upload"></span> Subir Mi vídeo
+                </a>
+            </div>
+        </div>
+        <hr>
+        //-->
     </div>
+
+    <hr>
 
     <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10">
+                    <!--
                     <ul class="list-inline text-center">
                         <li>
                             <a href="#">
@@ -187,14 +156,16 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                    //-->
+                    <p class="copyright text-muted">Copyright &copy; SmartTools 2016</p>
                 </div>
             </div>
         </div>
     </footer>
 
     <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery.min.js"></script> //-->
+    <script src = "//code.jquery.com/jquery-2.2.4.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
@@ -205,10 +176,7 @@
 
     <!-- Theme JavaScript -->
     <script src="../concurso/clean-blog.min.js"></script>
-    <script src = "../vendor/summernote/summernote.min.js"></script>
-    <script src = "../vendor/sweetalert/sweetalert.min.js"></script>
-    <script src = "../js/newvideo.js"></script>
-
+    <!-- <script src="../videojs/video.js"></script> //-->
+    <script src="http://vjs.zencdn.net/5.11.6/video.js"></script>
 </body>
-
 </html>
