--- a/views/adminvideos.html
+++ b/views/adminvideos.html
@@ -162,17 +162,26 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">Concursos - {{data.nombre_empresa}}</h1>
+                        <h1 class="page-header">Mis videos de Concursos - {{data.nombre_empresa}}</h1>
                     </div>
-                    <div class="col-lg-12">
-                        <a href="/newconcurso/0" class="btn btn-default">
-                            <span class="glyphicon glyphicon-plus"></span> Nuevo Concurso
-                        </a>
-                    </div>
+
                     <hr>
                     
                     <div class="col-lg-12" id = "concursos">
-                        <div align = 'center'><img src = 'img/loader.gif' border = '0'/></div>
+                        
+                            <div class="container">
+
+                                <hr>
+
+                                <div class="row">
+
+                                    <div class="col-lg-12" id = "videos">
+                                    </div>
+                                    <div class="col-lg-12" align = "center">
+                                        <div id = "paginar"></div>
+                                    </div>
+                                </div>
+                            </div>
                     </div>
                     <div class="col-lg-12" align = "center" id = "paginar"></div>
                     <!-- /.col-lg-12 -->
@@ -199,7 +208,19 @@
     <!-- Custom Theme JavaScript -->
     <script src="dist/js/sb-admin-2.js"></script>
     <script src = "vendor/sweetalert/sweetalert.min.js"></script>
-    <script src = "js/admin.js"></script>
+    <script src = "js/adminvideos.js"></script>
+        <script>
+        
+        var factoriaAdminVideos = function()
+        {
+
+            var datos = {id_admin : "{{data.idadministrador}}"};
+            this.getData = function(elemento)
+            {
+                return datos[elemento];
+            }
+        }
+    </script>
 </body>
 
 </html>
