--- a/views/adminvideos.html
+++ b/views/adminvideos.html
@@ -168,20 +168,7 @@
                     <hr>
                     
                     <div class="col-lg-12" id = "concursos">
-                        
-                            <div class="container">
-
-                                <hr>
-
-                                <div class="row">
-
-                                    <div class="col-lg-12" id = "videos">
-                                    </div>
-                                    <div class="col-lg-12" align = "center">
-                                        <div id = "paginar"></div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div align = 'center'><img src = 'img/loader.gif' border = '0'/></div>
                     </div>
                     <div class="col-lg-12" align = "center" id = "paginar"></div>
                     <!-- /.col-lg-12 -->
